name:                arbor-ip
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/packetloop/arbor-ip#readme
license:             MIT
license-file:        LICENSE
author:              Arbor Networks
maintainer:          mayhem@arbor.net
copyright:           Alexey Raga
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arbor.Network.Ip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/packetloop/arbor-ip

test-suite arbor-ip-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Arbor.Network.IpSpec
  build-depends:        base
                      , hedgehog
                      , hw-hspec-hedgehog
                      , arbor-ip
                      , hspec
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010