name:                hs-ip
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexeyraga/hs-ip#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Alexey Raga
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arbor.Network.Ip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexeyraga/hs-ip

test-suite hs-ip-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Arbor.Network.IpSpec
  build-depends:        base
                      , hedgehog
                      , hw-hspec-hedgehog
                      , hs-ip
                      , hspec
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010